more speedunit usage and lazy implementation